--- a/contact-style.css
+++ b/contact-style.css
@@ -1,6 +1,10 @@
 #contact {
   margin-left: 30px;
 }
+
+.contact-body {
+  display: flex;
+}
 form {
   margin-top: 30px;
 }
@@ -19,4 +23,10 @@ input {
 
 #submit {
   margin-left: 310px;
+}
+
+div img {
+  margin: auto;
+  height: 300px;
+  width: 300px;
 }
