--- a/assets-style.css
+++ b/assets-style.css
@@ -1,5 +1,5 @@
 #assets {
-  margin-left: 30px;
+  text-align: center;
 }
 table {
   border: solid 3px black;
@@ -7,6 +7,7 @@ table {
   width: auto;
   border-collapse: collapse;
   text-align: center;
+  margin: auto;
 }
 
 thead tr {
