--- a/assets-style.css
+++ b/assets-style.css
@@ -24,3 +24,29 @@ tbody tr:nth-child(odd) {
   background-color: #00471b;
   color: white;
 }
+
+footer {
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  table {
+    min-width: 100px;
+    font-size: 16px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  footer {
+    margin-top: 100px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  footer {
+    margin-top: 250px;
+  }
+}
