--- a/contact-style.css
+++ b/contact-style.css
@@ -5,6 +5,7 @@
 .contact-body {
   display: flex;
 }
+
 form {
   margin-top: 30px;
 }
@@ -21,7 +22,10 @@ input {
   margin: 8px 0px;
 }
 
-#submit {
+input[type="submit"] {
+  background-color: #00471b;
+  color: white;
+  border-radius: 10px;
   margin-left: 310px;
 }
 
@@ -29,4 +33,39 @@ div img {
   margin: auto;
   height: 300px;
   width: 300px;
+}
+
+@media screen and (max-width: 480px) {
+  textarea {
+    height: 250px;
+    width: 210px;
+  }
+  input[type="submit"] {
+    margin: 0px 100px;
+  }
+  .contact-body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  div img {
+    margin: 30px 50px;
+    height: 150px;
+    width: 150px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  div img {
+    margin: 200px 400px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  footer {
+    margin-top: 250px;
+  }
+  div img {
+    margin: 200px 800px;
+  }
 }
