--- a/family-style.css
+++ b/family-style.css
@@ -15,7 +15,7 @@ p {
   font-weight: bold;
 }
 
-p:hover {
+.name:hover {
   color: #b4975a;
   text-decoration: underline #00471b;
 }
@@ -30,4 +30,28 @@ footer img {
   height: 70px;
   width: 70px;
   margin-top: 5px;
+}
+
+@media screen and (max-width: 480px) {
+  .pictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .members {
+    margin: 30px 0px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  footer {
+    margin-top: 90px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  footer {
+    margin-top: 355px;
+  }
 }
