--- a/assets-style.css
+++ b/assets-style.css
@@ -26,10 +26,23 @@ tbody tr:nth-child(odd) {
 }
 
 footer {
-  margin-top: 20px;
+  margin-top: 200px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) and (min-width: 481px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-right: 25px;
+  }
+  header img {
+    margin-left: 40px;
+  }
+  ul {
+    display: flex;
+    flex-direction: column;
+  }
   table {
     min-width: 100px;
     font-size: 16px;
@@ -37,15 +50,20 @@ footer {
   h2 {
     font-size: 20px;
   }
-}
 
-@media screen and (min-width: 1025px) {
   footer {
     margin-top: 100px;
   }
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (max-width: 1024px) and (min-width: 769) {
+  footer {
+    margin-top: 200px;
+  }
+
+}
+
+@media screen and (min-width: 1025px) {
   footer {
     margin-top: 250px;
   }
