--- a/family-style.css
+++ b/family-style.css
@@ -24,6 +24,7 @@ footer {
   text-align: center;
   height: 80px;
   border-top: solid 1px #00471b;
+  margin-top: 600px;
 }
 
 footer img {
@@ -44,13 +45,30 @@ footer img {
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (max-width: 768px) and (min-width: 481px) {
   footer {
-    margin-top: 90px;
+    margin-top: 300px;
+  }
+
+  .pictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .members {
+    margin: 30px 0px;
   }
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (max-width: 1024px) and (min-width: 769) {
+  footer {
+    margin-top: 600px;
+  }
+  
+}
+
+@media screen and (min-width: 1025px) {
   footer {
     margin-top: 355px;
   }
